# zetamac-py

./: .gitignore  CHANGELOG.md  GOALS.md  LICENSE  README.html  README.md  TODO.md  pyproject.toml
src/zetamac_py/: config  localshare  main.py  presets.py  userfuncs.py  zetamac_py_doc.py
src/zetamac_py/tests/: test_main.py
