[project]
name = "zetamac-py"
version = "0.1.0"
description = "A terminal-based zetamac-style arithmetic practice game"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "yaofanfish" }
]
keywords = ["zetamac", "arithmetic", "tui", "textual", "game"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Education",
]
dependencies = [
    "textual>=0.58.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/yaofanfish/zetamac-py"
Repository = "https://github.com/yaofanfish/zetamac-py"

[project.scripts]
zetamac-py = "zetamac_py.main:main"
zeta = "zetamac_py.main:main" # alias

[project.optional-dependencies]
dev = [
    "textual-dev>=1.5.0",
    "pytest>=8.0.0",
]
opt = [
    "pyfiglet>=1.0.2",
    "miniaudio>=1.59.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zetamac_py"]
